--- a/style.css
+++ b/style.css
@@ -79,13 +79,13 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
       input:focus, button:focus{
         outline: none;
       }
-      .ppt_view{
+      .ppt_view, .image_view, .other_view{
         width: 100%;
         background: white;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        margin-block: 2rem;
+        margin-bottom: 2rem;
         display: flex;
         flex-direction: column;
         gap: 1rem;
@@ -101,3 +101,47 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
         font-weight: 700;
         text-align: center;
       }
+      .toggle-btn-div{
+        display: flex;
+        margin-block: 1rem;
+        gap: 20px;
+      }
+      .toggle-btn-div button{
+        background-color: transparent;
+        color: #333;
+        border-radius: 0;
+      }
+      .toggle-btn-div button:hover{
+        background-color: #ddd;
+        border-radius: 4px;
+      }
+      .toggle-btn-div button:active{
+        border-bottom: 1px solid #161616;
+      }
+      a{
+        color: #161616;
+        padding: 0.5rem 5px;
+        border-radius: 5px;
+      }
+      a:hover{
+        background-color: #eee;
+      }
+      .image_view img{
+        max-width: 70%;
+        border-radius: 5px;
+        box-shadow: 0 4px 16px #000000ad;
+      }
+      .imgContainer{
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+      }
+      .img-content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+      }
+
+
+/* "main": "index.html", */
