--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
         align-items: center;
       }
       .container {
+        position: relative;
         width: 60%;
-        margin-top: 5rem;
         background: white;
         padding: 20px;
         border-radius: 8px;
@@ -118,10 +118,20 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
       .toggle-btn-div button:active{
         border-bottom: 1px solid #161616;
       }
+      .other_link{
+        padding: 5px 0;
+        transition: 300ms;
+      }
+      .other_link:hover{
+        padding: 5px 0.5rem;
+      }
       a{
         color: #161616;
         padding: 0.5rem 5px;
         border-radius: 5px;
+      }
+      a:focus{
+        outline: none;
       }
       a:hover{
         background-color: #eee;
@@ -141,7 +151,24 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
         display: flex;
         flex-direction: column;
         justify-content: end;
+        gap: 10px;
       }
-
-
-/* "main": "index.html", */
+      .img-contentDiv{
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+        margin-bottom: 10px;
+      }
+      nav{
+        width: 100%;
+        top: 3rem;
+        right: 0.7rem;
+        display: flex;
+        justify-content:end;
+        position: fixed;
+      }
+      .other_viewLinks{
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+      }
