--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
         position: fixed;
         left: 0;
         top: 0;
+        z-index: 999;
         background-color: #111;
         filter: drop-shadow(2px 10px 6px #888);
       }
@@ -35,6 +36,7 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
         width: 60%;
         background: white;
         padding: 20px;
+        margin-top: 3rem;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
@@ -79,7 +81,7 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
       input:focus, button:focus{
         outline: none;
       }
-      .ppt_view, .image_view, .video_view, .other_view{
+      .ppt_view, .pdf_view, .image_view, .video_view, .other_view{
         width: 100%;
         background: white;
         padding: 20px;
@@ -187,4 +189,71 @@ pear-ctrl[data-platform="darwin"] { margin-top: 12px; margin-left: 10px; }
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #666;
+}
+
+#chat--container{
+  position: fixed;
+  top: 4rem;
+  left: 1rem;
+  z-index: 101;
+}
+#chat--container button{
+  font-size: 10px !important;
+  width: fit-content;
+}
+#chat--area{
+  background-color: #f4f4f4;
+  padding: 1rem;
+  margin: 10px 0;
+  box-shadow: 0 0 15px #0000007a;
+  border-radius: 0 10px 10px 10px;
+  position: relative;
+}
+#chat{
+  width: 350px;
+  height: 400px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.chat-message-left{
+  min-width: 20%;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 6px;
+  background-color: #ddd;
+  border-radius: 0 6px 6px 6px;
+}
+.chat-message-right{
+  min-width: 20%;
+  width: fit-content;
+  display: flex;
+  align-self: flex-end;
+  flex-direction: column;
+  padding: 10px 6px;
+  background-color: #ddd;
+  border-radius: 6px 0 6px 6px;
+}
+#sendMsgForm{
+  display: flex;
+}
+#sendMsgForm input{
+  border-radius: 6px 0 0 6px;
+}
+#sendMsgForm button{
+  border-radius: 0 6px 6px 0;
+}
+#sendMsgForm button, #sendMsgForm input{
+  font-size: 10px;
+}
+.triangle {
+  width: 0;
+  height: 0;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #f4f4f4;
+  position: absolute;
+  top: -10px;
+  left: 0;
 }
